test/errors/E031.m3
MODULE E031;


VAR  j : INTEGER; 

BEGIN
  DISPOSE(j); <*ERROR 031*>
END E031.
